--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://freddx-web.github.io/Bytech-website/index.html" title="To Top"><img src="https://img.icons8.com/windows/20/000000/home.png"/> Home</a></li>
         <li><a href="https://freddx-web.github.io/Conceptos-basicos-frontend/index.html"><img src="https://img.icons8.com/windows/20/000000/code.png"/> Frontend</a></li>
-        <li><a href="#myPage"><img src="https://img.icons8.com/ios-glyphs/18/000000/code-file.png"/> Backend</a></li>
+        <li><a href="https://freddx-web.github.io/Conceptos-basicos-Backend/index.html"><img src="https://img.icons8.com/ios-glyphs/18/000000/code-file.png"/> Backend</a></li>
         <li><a href="https://freddx-web.github.io/Concepto-javascript/index.html"><img src="https://img.icons8.com/ios-filled/18/000000/javascript.png"/> Javascript</a></li>
-        <li><a href="#download"> <img src="https://img.icons8.com/windows/20/000000/cloud.png"/> Nube </a></li>
+        <li><a href="#"> <img src="https://img.icons8.com/ios/20/000000/cloud-refresh--v2.png"/> Nube </a></li>
         <li><a href="#app"><img src="https://img.icons8.com/windows/20/000000/touchscreen-smartphone.png"/>App</a></li>
         <li><a href="#"><img src="https://img.icons8.com/fluent/20/000000/github.png"/></a></li>
       </ul>
