--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li><a href="https://freddx-web.github.io/Conceptos-basicos-frontend/index.html"><img src="https://img.icons8.com/windows/20/000000/code.png"/> Frontend</a></li>
         <li><a href="https://freddx-web.github.io/Conceptos-basicos-Backend/index.html"><img src="https://img.icons8.com/ios-glyphs/18/000000/code-file.png"/> Backend</a></li>
         <li><a href="https://freddx-web.github.io/Concepto-javascript/index.html"><img src="https://img.icons8.com/ios-filled/18/000000/javascript.png"/> Javascript</a></li>
-        <li><a href="#myPage"> <img src="https://img.icons8.com/ios/20/000000/cloud-refresh--v2.png"/> Nube </a></li>
+        <li><a href="#myPage"><img src="https://img.icons8.com/ios/20/000000/cloud-refresh--v2.png"/> Nube </a></li>
         <li><a href="#app"><img src="https://img.icons8.com/windows/20/000000/touchscreen-smartphone.png"/>App</a></li>
         <li><a href="#"><img src="https://img.icons8.com/fluent/20/000000/github.png"/></a></li>
       </ul>
@@ -122,8 +122,8 @@
         <br>
         <li>4.<img src="icons/icons8-apple-logo-80.png">iCloud<br><br><b>Cloud</b> es una plataforma de <b>Apple</b> y un sistema de almacenamiento en la nube.Ofrece servicio para los clientes de <b>Mac</b> e <b>iOS</b>.
         Se trata de una plataforma para editar y compartir documentos y permite a los usuarios almacenar datos para luego poder acceder a ellos desde cualquier equipo.
-        <b>iCloud</b> guarda sus sitios favoritos para que se pueda acceder a ellos desde cualquier lugar con su <b>iPhone</b>, <b>iPad</b>, <b>iPod touch</b>, <b>Mac</b> o <b>Pc</b> e incluso se pueden realizar copias de seguridad de los equipos. iCloud fue lanzado el 12 de octubre de 2011 y, desde julio de 2012, cuenta con más de 150 millones de usuarios. </li>
-        <hr>
+        <b>iCloud</b> guarda sus sitios favoritos para que se pueda acceder a ellos desde cualquier lugar con su <b>iPhone</b>, <b>iPad</b>, <b>iPod touch</b>, <b>Mac</b> o <b>Pc</b> e incluso se pueden realizar copias de seguridad de los equipos. iCloud fue lanzado el 12 de octubre de 2011 y, desde julio de 2012, cuenta con más de 150 millones de 
+        <br>
         <br>
       </div>
       <div class="col-sm-12 col-md-6 col-lg-6">
@@ -137,7 +137,6 @@
         <br>
         <li>7.<img src="icons/icons8-mega-nz-80.png">Mega<br><br>
         Mega es un sistema de almacenamiento en la nube. Con previo registro puedes subir archivos ; fotografías, videos, desde cualquier parte. Además cuenta con el plan de pago más barato actualmente en el mercado. Cabe destacar la existencia de una aplicación en <a href="https://es.wikipedia.org/wiki/Google_Play">Google Play</a>, para móviles y la posibilidad de descargarse un acceso directo en tu pc.
-        <hr>
         <br>
       </div>
   </div>
